Added Functionality to Edit and Update Products.

--- a/src/app/category/category-list/category-detail/category-detail.component.html
+++ b/src/app/category/category-list/category-detail/category-detail.component.html
@@ -20,10 +20,10 @@
                 </a>
             </div>
         </div>
-        <div class="col-sm-5 col-md-5 col-lg-5 bg-light shadow">
-            <div>
+        <div class="col-sm-5 col-md-5 col-lg-5 shadow">
+            <div class="m-3">
                 <p *ngIf="imageMessage">{{imageMessage}}</p> 
-                <img class="d-block w-100 h-50"                
+                <img class="d-block h-20 w-100 img-responsive"                
                     [src]="randomImageUrl" alt="Random product image ">                                       
             </div>
         </div>
