--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -18,6 +18,7 @@
                     ([ngModel]) = "category.id"
                     class = "form-control" 
                     name = "categoryID">
+                        <option value="" selected>-- Select a category --</option>
                         <option *ngFor = "let category of categories " class = "text-dark">
                         {{category.name}}
                         </option>
