--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -37,7 +37,11 @@
                     </a>
                 </td>
                 <td>
-                    <button class="btn btn-danger">
+                    <button class="btn btn-danger"
+                            id="deleteProductBtn"
+                            data-toggle="modal" 
+                            data-target="#deleteProductModal"
+                            (click)="onShowModal(product.id)">
                         <i class = "fa fa-trash" 
                             style="font-size: 15px; color: whitesmoke;"></i>Delete
                     </button>
@@ -45,5 +49,71 @@
             </tr>
         </tbody>
     </table>
+</div>
+
+<div class="container">  
+    <!-- The Modal -->
+    <div class="modal fade" id="deleteProductModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+            
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title text-center">Delete</h4>                    
+                </div>
+                
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <div class="alert alert-light alert-dismissible fade show" 
+                        id="category-delete-info"
+                        *ngIf="showInfo">
+                        All Products with this category will be deleted
+                    </div>
+                    <div class="alert alert-success fade show" 
+                        id="category-delete-info"
+                        *ngIf="successMessage !== ''">
+                        <!-- <button type="button" class="close" data-dismiss="alert">&times;</button> -->
+                        {{successMessage}}
+                    </div>
+                    <div class="alert alert-warning alert-dismissible fade show" 
+                        id="category-delete-info"
+                        *ngIf="delError">
+                        <p>{{delError.error.error}} &nbsp; {{delError.error.status}}</p>
+                        <p>{{delError.error.message}}</p>
+                    </div>
+
+                    <div class="alert alert-danger fade show"
+                        *ngIf="!removeWarning && !delError">
+                        <strong> Are you sure you want to delete this category?</strong>
+                        <div class="m-3">
+                            <button type="button" 
+                                    class="btn btn-danger shadow rounded-0 mr-3"
+                                    (click)="onClickYes()">Yes
+                            </button>
+                            <button type="button" 
+                                    class="btn btn-secondary shadow rounded-0"
+                                    data-dismiss="modal"
+                                    >No
+                            </button>
+                        </div>
+                        <div class="progress mt-4"
+                                *ngIf="showProgress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger rounded-0" 
+                                style="width:60%">
+                                deleting...
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>          
+            </div>
+        </div>
+    </div>
+    
 </div>
 
