--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -7,10 +7,39 @@
     <div class="m-2">
         <a routerLink = "/add-product" class="btn btn-primary shadow rounded-0 m-1">Add Product</a>
     </div>  
+
+    <!-- display loading Message  -->
+    <div class="form-control text-center mx-auto " 
+        style="border: none;"
+        *ngIf="!fetchingData && !getCatError">
+        <div>
+            <small>Loading...</small>
+        </div>
+        <br>
+        <div class="spinner-grow text-primary"></div>
+        <div class="spinner-grow text-secondary"></div>
+        <div class="spinner-grow text-dark"></div>
+        <div class="spinner-grow text-info"></div>
+        <div class="spinner-grow text-danger"></div>
+    </div>
+
+    <!-- display error Message -->
+    <div class="alert alert-danger alert-dismissible" *ngIf="!fetchingData && getCatError">
+        <h6>Opps an Error Occured</h6>
+        <p>status: {{getCatError.status}}</p>
+        <p *ngIf="getCatError.status === 0">
+            <strong>Server Cannot be reached at this time. Please Check your internet connection.</strong>
+        </p>
+        <p>message:  <br>
+            {{getCatError.message}}            
+        </p>
+        <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
+    </div>
+    
     <div>
         <router-outlet></router-outlet>        
     </div>
-    <table class = "table bg-light">
+    <table class = "table bg-light" *ngIf="fetchingData">
         <thead>
                 <th>Thumbnail</th>
                 <th>Name</th>
