--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,18 +3,19 @@
 /* .app-template{
     width: 100%;
     height: 100%;
-}
+} */
+
 header{
     height: 10%;
     
-} */
+}
 
-/* section{
+section{
     height: 80%;
-    margin-bottom:10px ;
+    margin-bottom:10% ;
     
 }
 
 footer{
     height: 10%;
-} */
+}
