--- a/src/app/products/product-list/product-detail/product-edit/product-edit.component.html
+++ b/src/app/products/product-list/product-detail/product-edit/product-edit.component.html
@@ -1,8 +1,8 @@
-<div class = "container-fluid bg-light mb-5">
+<div class = "container-fluid bg-light">
     <div class = "row row-styles">
-        <div class = "col-sm-3"></div>
-        <div class = "col-sm-6 form-div bg-light shadow m-2">
-            <h3 class = "text-capitalize text-center">Edit product</h3>
+        <div class = "col-sm-2"></div>
+        <div class = "col-sm-8 form-div">
+            <h3 class = "text-capitalize">Edit product</h3>
             <div class="alert alert-success alert-dismissible m-2" *ngIf="dataSaved && !Error">
                 <button type="button" class="close" data-dismiss="alert">x</button>
                 {{ successMessage }}
@@ -63,20 +63,7 @@
                     ngModel 
                     name = "url">
                 </div>
-                <br><hr>
-                <div class="clearfix">
-                    <div class="float-left mx-5">
-                        <button class = "btn btn-info w-5 shadow rounded-0" 
-                                type = "submit">Update
-                        </button>
-                    </div>
-                    <div class="float-right mx-5">
-                        <button class = "btn btn-outline-secondary shadow rounded-0 w-5" 
-                                type = "button"
-                                (click)="onCloseForm()">close
-                        </button>
-                    </div>
-                </div>
+                <button class = "btn btn-primary" type = "submit">Update</button>
             </form>
             
         </div>
