--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -8,9 +8,7 @@
     <div class="m-2">
         <a routerLink = "/add-product" class="btn btn-primary shadow rounded-0 m-1">Add Product</a>
     </div>  
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 
     <!-- display loading Message  -->
     <div class="form-control text-center mx-auto" 
@@ -40,16 +38,11 @@
         <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
     </div>
     
-=======
->>>>>>> parent of 7d47891... edit-product UI improved
-=======
->>>>>>> parent of 7d47891... edit-product UI improved
-=======
->>>>>>> parent of 7d47891... edit-product UI improved
+
     <div>
         <router-outlet></router-outlet>        
     </div>
-    <table class = "table bg-light">
+    <table class = "table bg-light" *ngIf="fetchingData">
         <thead>
                 <th>Thumbnail</th>
                 <th>Name</th>
@@ -106,7 +99,7 @@
                     <div class="alert alert-light alert-dismissible fade show" 
                         id="category-delete-info"
                         *ngIf="showInfo">
-                        All Products with this category will be deleted
+                        This Product will be deleted
                     </div>
                     <div class="alert alert-success fade show" 
                         id="category-delete-info"
