--- a/src/app/category/category-list/category-edit/category-edit.component.html
+++ b/src/app/category/category-list/category-edit/category-edit.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col col-md-10 col-lg-10">
             <div class="alert alert-success alert-dismissible" *ngIf="dataSaved && !putCatError">
                 <button type="button" class="close" data-dismiss="alert">x</button>
                 {{ successMessage }}
@@ -11,7 +11,7 @@
                         ngModel
                         name="categoryId"
                         required>
-                <div class="form-group">
+                <div class="">
                     <label for="cname">Category Name:</label>
                     <input type="text" 
                             class="form-control" 
@@ -31,7 +31,7 @@
                     </div>
                             
                 </div>
-                <div class="form-group">
+                <div>
                     <label for="desc">Description</label>
                     <textarea type="password" 
                             class="form-control" 
@@ -51,7 +51,7 @@
                     </div> -->
                 </div>
                 <button type="submit" 
-                        class="btn btn-primary shadow m-1 rounded-0"
+                        class="btn btn-primary shadow m-2 rounded-0"
                         *ngIf="categoryName.valid && description.valid; else saveMessage">
                         Update
                 </button>
