--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -1,7 +1,7 @@
-<div class = "container-fluid bg-light mb-5">
+<div class = "container-fluid">
     <div class = "row row-styles">
-        <div class = "col-sm-3"></div>
-        <div class = "col-sm-6 form-div mt-3 shadow">
+        <div class = "col-sm-2 bg-info"></div>
+        <div class = "col-sm-8  text-center bg-primary form-div">
             <h3 class = "text-capitalize">add a new product</h3>
             <div class="alert alert-success alert-dismissible m-2" *ngIf="dataSaved && !Error">
                     {{ successMessage }}
@@ -14,9 +14,11 @@
                     ngModel
                     type = "text" 
                     class = "form-control" 
-                    name = "name"><br>
+                    name = "name"
+                    #name = "ngModel"><br>
+                    <span class="help-block" *ngIf = "name.valid"> Please enter a valid name</span>
                 </div>
-                <div class = "form-group" >
+                <div class = "" >
                     <label>Category</label>
                     <select
                     name = "categoryID"
@@ -31,7 +33,7 @@
                         </option>
                     </select><br>
                 </div>
-                <div class = "form-group">
+                <div class = "">
                     <label>Quantity</label>
                     <input
                     required 
@@ -40,7 +42,7 @@
                     ngModel 
                     name = "quantity"><br>
                 </div>
-                <div class = "form-group">
+                <div class = "">
                     <label>Price</label>
                     <input
                     required 
@@ -58,20 +60,10 @@
                     ngModel
                     name = "imageUrl"><br>
                 </div>
-                <br><hr>
-                <div class="clearfix">
-                    <div class="float-left">
-                        <button class = "btn btn-info w-5  shadow rounded-0" type = "submit">create</button>
-                    </div>
-                    <div class="float-right">
-                        <button class = "btn btn-outline-secondary w-5  shadow rounded-0" 
-                                type = "button"
-                                (click)="onCloseForm()">close</button>
-                    </div>
-                </div>
+                <button class = "btn btn-warning w-5 " type = "submit">create</button>
             </form>
         </div>
-        <div class = "col-sm-2"></div>
+        <div class = "col-sm-2 bg-info"></div>
     </div>
 </div>
 
