--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,86 +1,54 @@
 
 <!-- displays product list in a tabular manner -->
-<div class = "container-fluid bg-light mb-5"
-    id="product-List">
-    <marquee>
-        <h4 class = "text-capitalize productlist-message bg-light">our complete list of products</h4>
-    </marquee>
-    <div class="m-2">
-        <a routerLink = "/add-product" class="btn btn-primary shadow rounded-0 m-1">Add Product</a>
-    </div>  
-
-
-    <!-- display loading Message  -->
-    <div class="form-control text-center mx-auto" 
-        style="border: none;"
-        *ngIf="!fetchingData && !getCatError">
-        <div>
-            <small>Loading...</small>
-        </div>
-        <br>
-        <div class="spinner-grow text-primary"></div>
-        <div class="spinner-grow text-secondary"></div>
-        <div class="spinner-grow text-dark"></div>
-        <div class="spinner-grow text-info"></div>
-        <div class="spinner-grow text-danger"></div>
+<div class = "container-fluid ">
+    <div class = "product-list container-fluid">
+            <marquee class="">
+                    <h4 class = "text-capitalize productlist-message">our complete list of products</h4>
+            </marquee>
+                <div class="m-2 product-list">
+                    <a routerLink = "/add-product" class="btn btn-primary shadow rounded-0 m-1">Add Product</a>
+                </div>  
+                <div>
+                    <router-outlet></router-outlet>        
+                </div>
     </div>
-
-    <!-- display error Message -->
-    <div class="alert alert-danger alert-dismissible" *ngIf="!fetchingData && getCatError">
-        <h6>Opps an Error Occured</h6>
-        <p>status: {{getCatError.status}}</p>
-        <p *ngIf="getCatError.status === 0">
-            <strong>Server Cannot be reached at this time. Please Check your internet connection.</strong>
-        </p>
-        <p>message:  <br>
-            {{getCatError.message}}            
-        </p>
-        <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
+    <div class="row product-list m-0">
+        <div class="col-md-2 product-list"></div>
+        <div class="col-sm-12 col-md-8 shadow border product-details bg-light">
+            <table class = "table">
+                <thead>
+                    <th>Thumbnail</th>
+                    <th>Description</th>
+                </thead>
+                <tbody class = "text-primary">
+                    <tr *ngFor = "let product of products" class = "col-sm-4">
+                        <td>
+                            <img [src] = "product.imageUrl" id = "product-Thumbnail">
+                        </td>
+                        <td class = "product-Content">
+                            <small>
+                                Name:{{product.name}}<br>
+                                Caregory:{{product.category.name}}<br>
+                                Quantity:{{product.quantity}}<br>
+                                Price:{{product.price}}<br>
+                                <a class="btn btn-primary"[routerLink]="['/edit-product', product.id]">
+                                <i class = "fa fa-edit"style="font-size: 15px; color: whitesmoke;">
+                                </i>Edit
+                                </a>&nbsp;
+                            </small>
+                            
+                            <button class="btn btn-danger" id="deleteProductBtn" data-toggle="modal" data-target=
+                            "#deleteProductModal" (click)="onShowModal(product.id)">
+                                <i class = "fa fa-trash" style="font-size: 15px; color: whitesmoke;"></i>Delete
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-2 product-list"></div>
     </div>
     
-
-    <div>
-        <router-outlet></router-outlet>        
-    </div>
-    <table class = "table bg-light" *ngIf="fetchingData">
-        <thead>
-                <th>Thumbnail</th>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Quantity</th>
-                <th>Price/FCFA</th>
-                <th></th>
-                <th></th>
-        </thead>
-        <tbody class = "text-primary">
-            <tr *ngFor = "let product of products">
-                <td>
-                    <img [src] = "product.imageUrl" id = "product-Thumbnail">
-                </td>
-                <td class = "product-Content">{{product.name}}</td>
-                <td class = "product-Content">{{product.category.name}}</td>
-                <td class = "product-Content">{{product.quantity}}</td>
-                <td class = "product-Content">{{product.price}}</td> 
-                <td>
-                    <a class="btn btn-primary"
-                        [routerLink]="['/edit-product', product.id]">
-                        <i class = "fa fa-edit" 
-                            style="font-size: 15px; color: whitesmoke;"></i>Edit
-                    </a>
-                </td>
-                <td>
-                    <button class="btn btn-danger"
-                            id="deleteProductBtn"
-                            data-toggle="modal" 
-                            data-target="#deleteProductModal"
-                            (click)="onShowModal(product.id)">
-                        <i class = "fa fa-trash" 
-                            style="font-size: 15px; color: whitesmoke;"></i>Delete
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
 </div>
 
 <div class="container">  
@@ -99,7 +67,7 @@
                     <div class="alert alert-light alert-dismissible fade show" 
                         id="category-delete-info"
                         *ngIf="showInfo">
-                        This Product will be deleted
+                        All Products with this category will be deleted
                     </div>
                     <div class="alert alert-success fade show" 
                         id="category-delete-info"
