Product list under a category added

--- a/src/app/category/category-list/category-detail/category-detail.component.css
+++ b/src/app/category/category-list/category-detail/category-detail.component.css
@@ -15,5 +15,34 @@
 
 .nopadding {
     padding: 0 !important;
+    padding: 6px !important;
     margin: 0 !important;
+    margin-bottom: 10px !important;
+    margin-top: 10px !important;
+}
+
+.product-list-row {
+    background: white !important;
+}
+
+.product-list-row a{
+    text-decoration: none;
+    text-decoration-color: none;
+    color: black;
+}
+
+.product-list-row div.product-list:hover{
+    border-style: ridge !important;
+    background:#f8f9fa !important;
+    
+}
+
+.product-list{
+    height: 300px, auto;
+    cursor: pointer;
+}
+
+.product-list img{
+    height: 100%;
+    width: 100%;
 }
