--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -39,8 +39,8 @@
                 routerLinkActive="active">
                 <img src="https://cdn.pixabay.com/photo/2014/08/05/10/30/iphone-410324_1280.jpg" 
                     class="img-thumbnail" alt="image">
-                <small class="mt-3 text-center "
-                    style="color: black;">{{category.name}}</small>
+                <p class="my-3 text-center "
+                    style="color: black;">{{category.name}}</p>
             </a>   
             
 
@@ -54,29 +54,4 @@
         </div>
     </div>
 
-
-    <!-- <div class="row category-card-section" *ngIf="categories.length >= 1">
-        <div class="col-sm-12 col-md-12 col-lg-12">
-            <div class="card-columns" style="margin: 0;" >
-                    <div class="card my-3" 
-                    style="width:400px; "
-                    *ngFor="let category of categories; let i=index">    
-                    <div class="card-body">
-                            <div>
-                                <img class="card-img-top"
-                                src="https://cdn.pixabay.com/photo/2014/08/05/10/30/iphone-410324_1280.jpg" 
-                                alt="Card image">
-                            </div>
-                        <p class="card-title mt-3 category-name text-center "><strong>{{category.name}}</strong></p>
-                        <a class="btn btn-primary stretched-link rounded-0"
-                            id="view-catDetail-button"
-                            [routerLink]="['/category', category.id]"
-                            >
-                            <i class="fa fa-eye mr-2" style="font-size:20px"></i>Details
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 </div>
