--- a/src/app/products/product-list/product-detail/product-detail.component.html
+++ b/src/app/products/product-list/product-detail/product-detail.component.html
@@ -1,1 +1,96 @@
-<p>product-detail works!</p>
+<div class="container-fluid bg-light">
+        <!-- display Carousel of categories -->
+    <div class="row">
+        <div class="col-md-2 col-lg-2"></div> 
+        <div class="col">
+            <div class="row my-4">  
+                <!-- loading message -->
+                    <div class="align-center" *ngIf="!fetchingData && !getCatError">
+                        <div>Loading ...</div>
+                        <div class="spinner-border m-5"></div>
+                    </div>
+                       
+                    <!-- display error message -->
+                    <div class="alert alert-danger alert-dismissible" *ngIf="!fetchingData && getCatError">
+                        <h6>Opps an Error Occured</h6>
+                        <p>status: {{getCatError.status}}</p>
+                        <p *ngIf="getCatError.status === 0">
+                            <strong>Server Cannot be reached at this time. Please Check your internet connection.</strong>
+                        </p>
+                        <p>message:  <br>
+                            {{getCatError.message}}            
+                        </p>
+                        <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
+                    </div>      
+
+
+                    <div class="col border shadow m-1" 
+                        style="background-color:none !important;"
+                        *ngIf="fetchingData">                        
+                        <div class="row product-detail-row">
+                            <div class="col-7 col-sm-6 col-md-6 col-lg-6
+                                    nopadding product-detail text-center" >
+                                <a *ngIf="product">
+                                    <img class="" height="190" width="275"              
+                                    [src]="product.imageUrl" 
+                                    alt="{{product.name}}">                                       
+                                </a>          
+                            </div>
+                            
+                            <div class="col" *ngIf="product">
+                                <dl class="mt-3">
+                                    <dd>Name</dd>
+                                    <dt>{{product.name}}</dt>
+                                </dl>
+                                <hr>
+                                <dl>
+                                    <dd>Price</dd>
+                                    <dt>{{product.price}} FCFA</dt>
+                                </dl>
+                                <hr>
+                                <dl>
+                                    <dd>amount</dd>
+                                    <dt>{{product.quantity}}</dt>
+                                </dl>                       
+                                <hr>
+                            </div>
+                        </div>       
+                </div>        
+            </div>
+            <hr>
+            <br>
+            <div class="row">
+                <div class="col">
+                    <h6>Explore other products</h6>
+                </div>
+            </div>
+            <div class="row product-list-row">
+                <div class="col-4 col-sm-4 col-md-4 col-lg-4
+                     nopadding product-list text-center" 
+                    *ngFor="let product of products; let i=index">
+                    <a [routerLink]="['/product', product.id]">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col nopadding">
+                                    <img class="" height="190" width="275"              
+                                    [src]="product.imageUrl" 
+                                    alt="{{product.name}}"> 
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p>{{product.name}}</p>
+                                    <p>{{product.price}}</p>
+                                </div>
+                            </div>
+                        </div>  
+                    </a>          
+                </div>        
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-3"></div>
+    </div>    
+</div>
+
+
+    
