--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -12,10 +12,38 @@
                     <router-outlet></router-outlet>        
                 </div>
     </div>
-    <div class="row product-list m-0">
+    <div class="row product-list m-0" >
         <div class="col-md-2 product-list"></div>
-        <div class="col-sm-12 col-md-8 shadow border product-details bg-light">
-            <table class = "table">
+        <div class=" col-12 col-sm-12 col-md-8 shadow border product-details bg-light">
+            
+            <div class="form-control text-center mx-auto " 
+                style="border: none;"
+                *ngIf="!fetchingData && !getCatError">
+                <div>
+                    <small>Loading...</small>
+                </div>
+                <br>
+                <div class="spinner-grow text-danger"></div>
+                <div class="spinner-grow text-secondary"></div>
+                <div class="spinner-grow text-dark"></div>
+                <div class="spinner-grow text-info"></div>
+            </div>
+
+                    <!-- display error Message -->
+            <div class="alert alert-danger alert-dismissible" *ngIf="!fetchingData && getCatError">
+                <h6>Opps an Error Occured</h6>
+                <p>status: {{getCatError.status}}</p>
+                <p *ngIf="getCatError.status === 0">
+                    <strong>Server Cannot be reached at this time. Please Check your internet connection.</strong>
+                </p>
+                <p>message:  <br>
+                    {{getCatError.message}}            
+                </p>
+                <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
+            </div>
+
+        
+            <table class = "table" *ngIf="fetchingData">
                 <thead>
                     <th>Thumbnail</th>
                     <th>Description</th>
