--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -20,18 +20,11 @@
     <!-- Links -->
     <div class="collapse navbar-collapse collapsibleNavbar" id="collapsibleNavbar">
         <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" 
-                        [routerLink]="['/']"
-                        routerLinkActive = "active">
-                        <i class="fa fa-home" style="font-size: 25px"></i>HOME
-                    </a>
-                </li>
             <li class="nav-item">
                 <a class="nav-link"
-                    [routerLink]="['/category/category-list']"
+                    [routerLink]="['/']"
                     routerLinkActive = "active"
-                    >CATEGORIES
+                    ><i class="fa fa-home" style="font-size: 25px"></i> HOME
                     
                 </a>
             </li>
@@ -40,6 +33,13 @@
                 routerLink="/products-list"
                 routerLinkActive = "active">PRODUCTS
             </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" 
+                    [routerLink]="['/layout']"
+                    routerLinkActive = "active">
+                    LAYOUT
+                </a>
             </li>
         </ul>
     </div>        
